--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
 
           <div class="nav-collapse collapse">
             <form class="form-search" action="/search_results">
-              <input type="text" name="q" value="<%= params[:q] %>" data-provide="typeahead" class="input-medium search-query" placeholder="Search">
+              <input type="text" name="q" value="<%= params[:q] %>" data-provide="typeahead" class="input-medium search-query" placeholder="Search by Brand">
             </form>
           </div>
 
