--- a/app/views/sales/_sale_li.html.erb
+++ b/app/views/sales/_sale_li.html.erb
@@ -1,15 +1,13 @@
 <li class="span3">
 <div class="hover-group">
   <div class="image-wrapper">
+    <span class="thisInfo">
+      <p class="lanvin"><%= sale.brand %></p>      
+    </span>
     <a href="<%= sale_url(sale.id) %>" onclick="if (isMobile()) { return true; } else { $('#sale_modal_<%= sale.id %>').modal({}); return false; }">
       <img class="product-pic" src="<%= sale.image_0.versions[:web_index] %>" alt="">
     </a>
     <span class="thisInfo">
-      <p class="lanvin"><%= sale.brand %></p>
-      <p class="flats">Size <%= sale.size %><p>
-      <!--
-      <p><i><%= sale.metro.name %></i></p>
-      -->
     </span>
     <div class="hover-toggle">
       <center><span class="percentoff"><%= (sale.percent_off * 100).round %>% Off</span></center>
