--- a/app/views/sales/new.html.erb
+++ b/app/views/sales/new.html.erb
@@ -57,26 +57,6 @@ td.selectedSize {
 </style>
 
 
-<% 
-
-    @sizes = [
-      ["N/A","PETITE","XS","S","M"],
-      ["L","XL","XXL","00","0"],
-      ["1","2","3","4","4.5"],
-      ["5","5.5","6","6.5","7"],
-      ["7.5","8","8.5","9","9.5"],
-      ["10","10.5","11","11.5","12"],
-      ["12.5","13","13.5","14","14.5"],
-      ["15","15.5","16","16.5","17"],
-      ["17.5","18","18.5","19","19.5"],
-      ["20","21","22","23","24"],
-      ["25","26","27","28","29"],
-      ["30","31","32","33","34"],
-      ["35","36","37","38","39"],
-      ["40","41","42","43","44"]
-]
-
-%>
 
 
   <script>
@@ -505,7 +485,7 @@ function selectSize(size_id) {
                                <div class="" id="" style="max-width: 400px;">
 
                                  <table class="table table-bordered table-condensed" id="sizechart">            
-                                   <% @sizes.each_with_index do |size_row, row| %>
+                                   <% Sale.sizes.each_with_index do |size_row, row| %>
                                      <tr>
                                      <% size_row.each_with_index do |size, col|
                                        size_id = "size_#{row}_#{col}" %>
