--- a/app/views/sales/_sales.html.erb
+++ b/app/views/sales/_sales.html.erb
@@ -29,9 +29,18 @@ function fave(sale_id) {
   var lastPage = false;
 
   var more_base_url = "<%= request.path  %>.html";
-  var more_base_data = {category_id: <%= params[:category_id].to_i %>};
+  var more_base_data = {category_id: <%= params[:category_id].to_i %>}
 
-  function addPage(goToPage) {
+  if ($('#city_id').length > 0) {
+    more_base_data.city_id = $('#city_id').val()
+  }
+
+  if ($('#size').length > 0) {
+    more_base_data.size = $('#size').val()
+  }
+
+
+  function addPage() {
     $.get(more_base_url, 
       $.extend(more_base_data, {page: currentPage+1}), 
       function(d){
@@ -42,15 +51,6 @@ function fave(sale_id) {
           $('#sales-container').append(d);
           currentPage++;        
           loading = false;
-          if (goToPage > 1) {
-            console.log("gotoPage: " + goToPage);
-            var pos = $('#sales_page_' + currentPage).offset();
-            scroll(0,pos.top);
-            addPage(goToPage-1);
-          }
-          else {
-            /* history.pushState({page: currentPage}); */
-          }
         }
       });
   };
