fix size bug in purchase

--- a/app/views/purchases/_form.html.erb
+++ b/app/views/purchases/_form.html.erb
@@ -73,7 +73,7 @@ function toggleAddress() {
        
           <p>
           <%= select_tag 'transaction[custom_fields][size]',
-            options_for_select((["Select Size"] + @sale.sizes.collect(&:value)), params[:size]) %>
+            options_for_select((["Select Size"] + @sale.sizes), params[:size]) %>
           </p>
         <% end %>
         
