cross-browser fixes for sale upload

--- a/app/views/sales/new.html.erb
+++ b/app/views/sales/new.html.erb
@@ -81,10 +81,16 @@ function submitSaleForm() {
   $('#sale_form').submit()
 }
 
+function jsonFromIframe(iframe_id) {
+  var iframeBody = $("#"+iframe_id)[0].contentWindow.document.body;
+  var jsonText = (iframeBody.innerText || iframeBody.textContent);
+  var jsonResponse = JSON.parse(jsonText);
+  return jsonResponse;
+}
 
 $(document).ready(function () {
   $('#_image_0_iframe').load(function() {
-    var jsonResponse = JSON.parse($("#_image_0_iframe")[0].contentWindow.document.body.innerText);
+    var jsonResponse = jsonFromIframe("_image_0_iframe");
     $('#image_0_key')[0].value = jsonResponse['key']
     if ($('#sale_image_uploader_image_1').val().length > 0) {
       $('#image_1_form').submit();
@@ -94,7 +100,7 @@ $(document).ready(function () {
   });
 
   $('#_image_1_iframe').load(function() {
-    var jsonResponse = JSON.parse($("#_image_1_iframe")[0].contentWindow.document.body.innerText);
+    var jsonResponse = jsonFromIframe("_image_1_iframe");
     $('#image_1_key')[0].value = jsonResponse['key']
     if ($('#sale_image_uploader_image_2').val().length > 0) {
       $('#image_2_form').submit();
@@ -104,7 +110,7 @@ $(document).ready(function () {
   });
 
   $('#_image_2_iframe').load(function() {
-    var jsonResponse = JSON.parse($("#_image_2_iframe")[0].contentWindow.document.body.innerText);
+    var jsonResponse = jsonFromIframe("_image_2_iframe");    
     $('#image_2_key')[0].value = jsonResponse['key'];
     submitSaleForm();
   });
@@ -128,7 +134,7 @@ $(document).ready(function () {
   $('#uploady').click(function() {
     if (validateForm()) {
       $('#uploady')[0].disabled = true      
-      $('#uploady')[0].innerText = "Uploading..."
+      $('#uploady')[0].innerHTML = "Uploading..."
       $('#image_0_form').submit();
     }
   });
