--- a/app/views/admin/sales/edit.html.erb
+++ b/app/views/admin/sales/edit.html.erb
@@ -123,6 +123,14 @@
                                 </div>
                               </div>
 
+                              <div class="control-group">
+                                <label class="control-label" for="optionsCheckbox">Sold Out</label>
+                                <div class="controls">
+                                  <%= check_box(:sale, :sold_out) %>
+                                </div>
+                              </div>
+                              
+
 
                               <div class="form-actions">
                                 <button type="submit" class="btn btn-primary">Save changes</button>
