--- a/app/views/sales/_sale_detail.html.erb
+++ b/app/views/sales/_sale_detail.html.erb
@@ -100,7 +100,11 @@
   <div class="span4 pull-right">
     <% if detail %>
       <% if sale.user and sale.user.is_merchant %>      
-        <a href="<%= new_sale_purchase_url(:sale_id => sale.id) %>" class="btn btn-success btn-large span4 pull-right">Buy</a>
+        <% if sale.sold_out %>
+          <a href="#" class="btn btn-success btn-large span5 pull-right disabled">Sold Out</a>          
+        <% else %>
+          <a href="<%= new_sale_purchase_url(:sale_id => sale.id) %>" class="btn btn-success btn-large span4 pull-right">Buy</a>
+        <% end %>
       <% else %>
         <a href="#" class="btn btn-success btn-large span4 pull-right disabled">Buy</a>
       <% end %>
