--- a/app/views/sales/_sale_modal.html.erb
+++ b/app/views/sales/_sale_modal.html.erb
@@ -13,7 +13,11 @@
   <div class="modal-footer">
     <span class="row-fluid">
       <% if sale.user and sale.user.is_merchant %>
-        <a href="<%= new_sale_purchase_url(:sale_id => sale.id) %>" class="btn btn-success span4 pull-right">Buy</a>
+        <% if sale.sold_out %>
+          <a href="#" class="btn btn-success span4 pull-right disabled">Sold Out</a>
+        <% else %>
+          <a href="<%= new_sale_purchase_url(:sale_id => sale.id) %>" class="btn btn-success span4 pull-right">Buy</a>
+        <% end %>
     <% else %>
         <a href="#" class="btn btn-success span4 pull-right disabled">Buy</a>
     <% end %>
