--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
             <ul class="nav">
               <li><a href="<%= new_sale_url %>">Upload</a></li>
               <li><a href="/page/about">About</a></li>
-              <li><a href="/page/merchants-intro">Merchants</a></li>
+              <li><a href="/page/merchants-intro">Retailers</a></li>
               <li><a href="<%= edit_user_url("self") %>">Profile</a></li>
             </ul>
           </div><!--/.nav-collapse -->
