--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -24,6 +24,11 @@ body {
 	<div class="container">
 		<div class="marketing">
 			<div class="signup-unit">
+        <span class="order-status">
+					<a href="shipping.html"><u>Order Status</u></a>
+				</span>
+
+
         <fieldset>
 
 
@@ -44,6 +49,47 @@ body {
           </select>
         <% end %>
         <hr>
+
+
+         <script type="text/javascript">
+
+function uploadPhoto() {
+  if (checkSize(1024*1024)) {
+    $('#photo_form')[0].submit();
+  } else {
+
+  }
+}
+
+function checkSize(max_img_size)
+{
+    var input = document.getElementById("photo_file_field");
+    // check for browser support (may need to be modified)
+    if(input.files && input.files.length == 1)
+    {           
+        if (input.files[0].size > max_img_size) 
+        {
+            alert("The file must be less than " + (max_img_size/1024/1024) + "MB");
+            return false;
+        }
+    }
+
+    return true;
+}
+      </script>
+
+
+      <%= form_for(@user, :html => {:id => "photo_form", :multipart => true}) do |f| %>
+
+
+        <%= file_field_tag("photo", :id => "photo_file_field", :style => "display: none;", :onchange => "$('#upload-button').show()") %>
+        
+        <img src="<%= @user.photo_version_url(:profile) %>"><br><br>
+        
+        <button class="btn url" type="button" onclick="$('#photo_file_field').click()">Select Image</button>        
+        <button id="upload-button" class="btn url" type="button" onclick="uploadPhoto()" style="display:none;">Upload Image</button><br>
+        
+      <% end %> 
 
 
         
@@ -172,11 +218,11 @@ function submitGender() {
         <span class="add-on">Last Name</span>
           <%= text_field_tag "last_name", @user.last_name, :class => "span2", :placeholder => "Last Name" %>
         </div>
-        <button class="btn url" type="button" onclick="$('#name_form')[0].submit();">Save</button><br>
+        <button class="btn url btn-success" type="button" onclick="$('#name_form')[0].submit();">Save</button>
 
         <% end %>
         
-				<br><br>
+				<br>
 				Enter Username for Custom URL
         <div class="input-prepend">
           <%
@@ -191,7 +237,7 @@ function submitGender() {
         <%= form_for(@user, :html => {:id => "custom_slug_form"}) do |f| %>
           <%= text_field_tag "custom_slug", @user.custom_slug,
             :class => "span2", :placeholder => custom_slug %>
-				  <button class="btn url" type="button" onclick="$('#custom_slug_form')[0].submit();">Save</button><br>
+				  <button class="btn url btn-success" type="button" onclick="$('#custom_slug_form')[0].submit();">Save</button><br>
 				<% end %>
 			   <hr>
 			
@@ -200,7 +246,7 @@ function submitGender() {
         <%= form_for(@user, :html => {:id => "bio_form"}) do |f| %>
           <%= text_area_tag "bio", @user.bio, :rows => 3, :placeholder => "Enter text (150 character limit)" %>
         &#160;
-        <button class="btn url" type="button" onclick="$('#bio_form')[0].submit();">Save</button><br>
+        <button class="btn url btn-success" type="button" onclick="$('#bio_form')[0].submit();">Save</button><br>
       <% end %>
 		<hr>
 		
