contact get rid of elipses

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -13,17 +13,17 @@ body {
   <fieldset>
 
     <label>Your Name *</label>
-    <input name="name" type="text" placeholder="Type here…">
+    <input name="name" type="text" placeholder="Type here">
   </fieldset>
   <fieldset>
 
     <label>Email *</label>
-    <input name="email" type="text" placeholder="Type something…">
+    <input name="email" type="text" placeholder="Type something">
   </fieldset>
   <fieldset>
 
     <label>Subject *</label>
-    <input name="subject" type="text" placeholder="Type something…">
+    <input name="subject" type="text" placeholder="Type something">
   </fieldset>
   <label>Message *</label>
   <textarea name="message" rows="10" class="span9"></textarea><br>
