--- a/app/views/admin/purchases/index.html.erb
+++ b/app/views/admin/purchases/index.html.erb
@@ -22,7 +22,7 @@
       </td>
       <td class="nowrap"><%= purchase.sale.user.display_name %></td>
       <td><%= purchase.sale.product %></td>
-      <td class="nowrap"><%= purchase.created_at.strftime("%d %b %Y") %>
+      <td class="nowrap"><%= purchase.created_at.strftime("%d %b %Y") %></td>
       <td><%= humanized_money_with_symbol purchase.total %></td>
       <td class="nowrap">
         <%= link_to 'View', admin_purchase_path(purchase),
