order status link on edit profile

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -25,7 +25,7 @@ body {
 		<div class="marketing">
 			<div class="signup-unit">
         <span class="order-status">
-					<a href="shipping.html"><u>Order Status</u></a>
+          <a href="<%= purchases_url %>"><u>Order Status</u></a>
 				</span>
 
 
