--- a/app/assets/stylesheets/jess.css
+++ b/app/assets/stylesheets/jess.css
@@ -818,7 +818,7 @@ td.auto-width {
 	margin:-267px 15px;
 	position:absolute; 
 	vertical-align:middle;
-	height:316px 
+	height:316px;
 	width:710px; 
 	display:block;
 
