--- a/app/views/errors/404.html.erb
+++ b/app/views/errors/404.html.erb
@@ -1,6 +1,8 @@
 	<br><br><br>
 	<div class="fourzerofour">
-<p><font color="">404</font></p><br><br><br><br>
+    <p><font color="">404</font></p>
+  </div>
+  <br><br><br><br>
 
 <p class="muted"><font size="5">Oops! <br>The page you are looking for <br>was not found.</font></p>
 
