--- a/app/views/errors/404.html.erb
+++ b/app/views/errors/404.html.erb
@@ -4,6 +4,9 @@
   </div>
   <br><br><br><br>
 
+  <center>
 <p class="muted"><font size="5">Oops! <br>The page you are looking for <br>was not found.</font></p>
 
 <p><font size="5"><a href="/">Go back?</a></font></p>
+
+</center>
