--- a/app/views/layouts/prelogin.html.erb
+++ b/app/views/layouts/prelogin.html.erb
@@ -60,7 +60,7 @@
               <% unless @no_header_links %>
               <li><%= link_to "Join", register_url %></li>
               <li><%= link_to "Login", new_session_url %></li>
-              <li><%= link_to "Retailers", "/page/merchants-intro"  %></li>
+              <li><%= link_to "Retailers", "/stores"  %></li>
               <% end %>
             </ul>
           </div><!--/.nav-collapse -->
